objects/cnx__Connects_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>cnx__Additional_Search_Parameters__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Additional_Search_Parameters_v2__c</fullName>
        <inlineHelpText>Defines parameters to pass to the opened search page or a custom Visualforce page page for inbound calls or to
        trigger a Lightning Flow.</inlineHelpText>
        <label>Additional Search Parameters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Media_Profile__c</fullName>
        <defaultValue>&quot;sfdc_external_routing&quot;</defaultValue>
        <inlineHelpText>Selects the Agent Adapter Media Profile.</inlineHelpText>
        <label>Agent Media Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Work_Layout__c</fullName>
        <defaultValue>&quot;[{\&quot;key\&quot;:\&quot;Case\&quot;,\&quot;value\&quot;:\&quot;Subject,Priority,Status,CaseNumber\&quot;},{\&quot;key\&quot;:\&quot;LiveChatTranscript\&quot;,\&quot;value\&quot;:\&quot;Name,LiveChatButton.MasterLabel,LiveChatDeployment.MasterLabel,IpAddress\&quot;}]&quot;</defaultValue>
        <inlineHelpText>Configuration of Agent Work Layout.</inlineHelpText>
        <label>Agent Work Layout</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Allow_Agents_to_Decline_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set to true, a decline button will be displayed on the items, allowing the agent to decline the request.</inlineHelpText>
        <label>Allow Agents to Decline Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Call_Data_Display_Options__c</fullName>
        <inlineHelpText>Defines if and how this peripheral variables are shown in the call work item.</inlineHelpText>
        <label>Call Data Display Options List</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Call_Item_Height__c</fullName>
        <defaultValue>300</defaultValue>
        <inlineHelpText>Defines the height of the call items on the UI.</inlineHelpText>
        <label>Call Item Height (px)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Call_Layout__c</fullName>
        <inlineHelpText>When the call item content exceeds the configured call item height, the content of the call item will be scrollable.
When activating one of the checkboxes the selected part of the call item will always be fully visible.</inlineHelpText>
        <label>Call Item Behavior</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>StickyActivity</fullName>
                    <label>Make Call Activity Section Sticky</label>
                </value>
                <value>
                    <fullName>StickyNewRecord</fullName>
                    <label>Make Create New Section Sticky</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Call_Log_Type__c</fullName>
        <inlineHelpText>Selects the call log type.</inlineHelpText>
        <label>Call Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <label>No Call Log</label>
                </value>
                <value>
                    <fullName>callActivityRecord</fullName>
                    <default>true</default>
                    <label>Call Activity Record</label>
                </value>
                <value>
                    <fullName>salesforceInteractionLog</fullName>
                    <label>Salesforce Interaction Log (Classic Only)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Call_Log_Variable_Mapping__c</fullName>
        <defaultValue>&quot;[{\&quot;key\&quot;:\&quot;Subject\&quot;,\&quot;value\&quot;:\&quot;Call {DATE:YYYY-MM-DD HH:mm:ss}\&quot;}]&quot;</defaultValue>
        <label>Call Log Variable Mapping</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Campaign_Account_Number_URL__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Campaign_Account_Number_URL_v2__c</fullName>
        <inlineHelpText>Adds a reference to a campaign management tool.</inlineHelpText>
        <label>Campaign Account Number URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Chats_To_Set_Voice_NR__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of chats to set Voice channel to Not Ready</inlineHelpText>
        <label>Chats To Set Voice Not Ready</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Cisco_Media_Routing_Domains__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <inlineHelpText>Configuration of one or two media channels</inlineHelpText>
        <label>Media Routing Domain Settings</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Count_Offered_Chats_to_Set_Voice_NR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Count Offered Chats to Set Voice Not Ready</description>
        <inlineHelpText>If set to true offered chats will be considered for the “Chats to set voice Not Ready“ limit.</inlineHelpText>
        <label>Count Offered Chats to Set Voice NR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Deployment_Type__c</fullName>
        <inlineHelpText>Selects the deployment type.</inlineHelpText>
        <label>Deployment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-voice</fullName>
                    <default>true</default>
                    <label>Voice-Only</label>
                </value>
                <value>
                    <fullName>2-omni</fullName>
                    <label>Salesforce Omni-Channel</label>
                </value>
                <value>
                    <fullName>12-media</fullName>
                    <label>Cisco Universal Queue</label>
                </value>
                <value>
                    <fullName>1024-small</fullName>
                    <label>Small</label>
                </value>
                <value>
                    <fullName>mcal</fullName>
                    <isActive>false</isActive>
                    <label>mcal</label>
                </value>
                <value>
                    <fullName>media</fullName>
                    <isActive>false</isActive>
                    <label>media</label>
                </value>
                <value>
                    <fullName>mri</fullName>
                    <isActive>false</isActive>
                    <label>mri</label>
                </value>
                <value>
                    <fullName>omni</fullName>
                    <isActive>false</isActive>
                    <label>omni</label>
                </value>
                <value>
                    <fullName>voice</fullName>
                    <isActive>false</isActive>
                    <label>voice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Description__c</fullName>
        <inlineHelpText>Description of the b+s Configuration</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Dialing_Rules__c</fullName>
        <inlineHelpText>Dialing rules convert phone numbers stored in Salesforce to a dialable format.</inlineHelpText>
        <label>Dialing Rules</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Disabled_Media_Actions__c</fullName>
        <inlineHelpText>Disabled Actions disable specific action buttons.</inlineHelpText>
        <label>Disabled Media Actions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chat_ItemReject</fullName>
                    <label>Chat Item Reject</label>
                </value>
                <value>
                    <fullName>Ticket_ItemReject</fullName>
                    <label>Ticket Item Reject</label>
                </value>
                <value>
                    <fullName>TaskScreenPop</fullName>
                    <label>Task Screen Pop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Disabled_Voice_Actions__c</fullName>
        <inlineHelpText>Disabled Actions disable specific action buttons.</inlineHelpText>
        <label>Disabled Voice Actions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClickToDial</fullName>
                    <label>Click To Dial</label>
                </value>
                <value>
                    <fullName>Close</fullName>
                    <label>Close Preview Outbound Call</label>
                </value>
                <value>
                    <fullName>Conference</fullName>
                    <label>Conference Call</label>
                </value>
                <value>
                    <fullName>Dialpad</fullName>
                </value>
                <value>
                    <fullName>EndCallOnHold</fullName>
                    <label>End Call On Hold</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                    <label>Reject Preview Outbound Call</label>
                </value>
                <value>
                    <fullName>SpeedDial</fullName>
                    <label>Speed Dial Buttons</label>
                </value>
                <value>
                    <fullName>Transfer_SST</fullName>
                    <label>Single Step Transfer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Display_Team_Messages__c</fullName>
        <inlineHelpText>Only available in Finesse 12.0 or above.</inlineHelpText>
        <label>Display Team Messages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>On message received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Edit_Number_On_Click_to_Dial__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opens the number in the Make Call bar instead of calling directly.</inlineHelpText>
        <label>Edit Number On Click-to-Dial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Enable_HTML5_Desktop_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set to true, for each incoming call or case a desktop notification is displayed in the lower right corner of
        the (primary) screen.</inlineHelpText>
        <label>Enable HTML5 Desktop Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Enable_High_Velocity_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set to true, b+s Connects communicates with High Velocity Sales (HVS) to handle HVS work.</inlineHelpText>
        <label>Enable High Velocity Sales (Lightning)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Enable_Integration_API_in_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set to Yes, the Connects Integration API sends events and listens for requests on the Connects Lightning Message Channel. Keep this setting on No if you do not use any integrations in Salesforce Lightning to reduce browser workload.</inlineHelpText>
        <label>Enable Integration API in Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Enable_Issue_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Send Report Issue item will be shown in agent&apos;s Softphone Settings menu.</inlineHelpText>
        <label>Enable Issue Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Enable_Mobile_Agent_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the Cisco Mobile Agent support.</inlineHelpText>
        <label>Enable Mobile Agent Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Enable_Redial_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Activate this setting to enable the redial Button in b+s Connects for Salesforce</description>
        <inlineHelpText>Activate this setting to enable the redial Button in b+s Connects for Salesforce</inlineHelpText>
        <label>Enable Redial Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Finesse_SSO_Frame_URL__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Finesse_SSO_Frame_URL_v2__c</fullName>
        <description>Relative path to SSO Frame on Finesse</description>
        <inlineHelpText>Relative path to the Finesse SSO Frame</inlineHelpText>
        <label>Finesse SSO Frame URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Finesse_Server_Timeout__c</fullName>
        <defaultValue>60000</defaultValue>
        <inlineHelpText>This field is required if Finesse URL B is set. Input is in milliseconds. Max length 8 digits.</inlineHelpText>
        <label>Finesse Server Timeout</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Finesse_URL_A__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Finesse_URL_A_v2__c</fullName>
        <defaultValue>&apos;https://myFinesseServerA.myDomain&apos;</defaultValue>
        <inlineHelpText>URL like https://myFinesseServerA.myDomain</inlineHelpText>
        <label>Finesse URL A</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Finesse_URL_B__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Finesse_URL_B_v2__c</fullName>
        <defaultValue>&apos;https://myFinesseServerB.myDomain&apos;</defaultValue>
        <inlineHelpText>URL like https://myFinesseServerB.myDomain</inlineHelpText>
        <label>Finesse URL B</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Flags__c</fullName>
        <inlineHelpText>Enable special features, which are not part of the normal gadget behavior.</inlineHelpText>
        <label>Flags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Force_Mobile_Agent_Connection__c</fullName>
        <description>Force &apos;Nailed Connection&apos; (N) or &apos;Call-By-Call&apos; (C)</description>
        <inlineHelpText>Choses the Mobile Agent mode.</inlineHelpText>
        <label>Force Mobile Agent Connection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGENT_CHOOSES</fullName>
                    <default>true</default>
                    <label>Agent chooses</label>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                    <label>Nailed Connection</label>
                </value>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                    <label>Call By Call</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Hide_Chat_After_Accepting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set to true the SFDC Chat items displayed in the gadget will hide when accepted.</inlineHelpText>
        <label>Hide Chat After Accepting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Hide_Omni_Channel_Work_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Omni-Channel Work Item After Accepting</description>
        <inlineHelpText>If set to true the SFDC Omni-Channel items displayed in the gadget will hide when accepted.</inlineHelpText>
        <label>Hide Omni-Channel Work Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Integration_Settings__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <inlineHelpText>Defines settings for integrations</inlineHelpText>
        <label>Integration Settings</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Integrations_Custom_Toolbars__c</fullName>
        <inlineHelpText>With this Configuration you&apos;re able to add Custom Components to the Softphone. These Custom Components can be Salesforce Visualforce pages or external web pages.</inlineHelpText>
        <label>Custom Toolbars</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Internal_Number_Format_RegEx__c</fullName>
        <inlineHelpText>Defines the format for internal numbers.</inlineHelpText>
        <label>Internal Number Format RegEx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sets b+s Configuration as default.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Issue_Report_URL__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Issue_Report_URL_v2__c</fullName>
        <defaultValue>&quot;mailto:support@mycompany.com?subject=Connects issue report&amp;body={message}&quot;</defaultValue>
        <inlineHelpText>Specifies an URL that is executed after the agent uploads log files to the Finesse server to report an issue.</inlineHelpText>
        <label>Issue Report URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Lookup_Rules__c</fullName>
        <inlineHelpText>Used to match customer phone numbers to CRM records.</inlineHelpText>
        <label>Lookup Rules</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Max_Directory_Lookup_Suggestions__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Max Number of Directory Lookup Suggestions</description>
        <inlineHelpText>Specifies the max number of lookup entries shown in the MakeCall dialog.</inlineHelpText>
        <label>Max Directory Lookup Suggestions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Max_Number_of_CRM_Lookup_Suggestions__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>Specifies the max number of lookup entries shown on the call work item.</inlineHelpText>
        <label>Max Number of CRM Lookup Suggestions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Media_Additional_Search_Parameters__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Media_Additional_Search_Parameters_v2__c</fullName>
        <inlineHelpText>Reused key to integrate Lightning Flows in Search and Screen pop</inlineHelpText>
        <label>Additional Search Parameters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Media_New_Record_URL__c</fullName>
        <defaultValue>&quot;[{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;00Q/e?Email={Sender}\&quot;},{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;001/e?Email={Sender}\&quot;},{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;003/e?Email={Sender}\&quot;}]&quot;</defaultValue>
        <inlineHelpText>New Record URLs are displayed on incoming cases. These configuration settings are used for enabling and configuring these links.</inlineHelpText>
        <label>New Media Record URLs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Media_Search_and_Screen_Pop_Variable__c</fullName>
        <inlineHelpText>Defines the expression that is searched for in the Salesforce database on tasks.</inlineHelpText>
        <label>Search and Screen Pop Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Media_Service_URL__c</fullName>
        <defaultValue>&quot;https://myConnectsMediaServer:8090/connects/&quot;</defaultValue>
        <inlineHelpText>URL to the Agent Adapter web service</inlineHelpText>
        <label>Media Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cnx__Not_Ready_Reason_Code_While_Chat__c</fullName>
        <defaultValue>&quot;ReasonCode&quot;</defaultValue>
        <inlineHelpText>Specifies the Not Ready Reason Code which will be set in Voice channel if the chat limit is reached.</inlineHelpText>
        <label>Not Ready Reason Code While Chat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Not_Ready_Threshold__c</fullName>
        <inlineHelpText>Channels that are “Not Ready” change the color when the agent stays in a Not Ready state for more than the given amount of seconds. Leave empty to disable this feature.</inlineHelpText>
        <label>Not Ready Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Presence_State_Available_All__c</fullName>
        <inlineHelpText>Record ID of the Salesforce Omni-Channel presence status in which all channels are available</inlineHelpText>
        <label>Presence State Available All</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Presence_State_Busy_All__c</fullName>
        <inlineHelpText>Record ID of the Omni-Channel presence status in which all channels are busy</inlineHelpText>
        <label>Presence State Busy All</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CC_Meta_Data_Keys__c</fullName>
        <label>Meta Data Keys</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CC_Recording_Link_Field__c</fullName>
        <label>Recording Link Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CC_User_ID_Appendix__c</fullName>
        <label>User ID Appendix</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CC_User_ID_Field__c</fullName>
        <label>User ID Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CC_User_Login_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Login Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_Login_Password__c</fullName>
        <label>On-Prem server Login Password</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_Login_Username__c</fullName>
        <label>On-Prem server Login Username</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_Meta_Data_Keys__c</fullName>
        <label>Meta Data Keys</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_Recording_Link_Field__c</fullName>
        <label>Recording Link Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_Recording_Server__c</fullName>
        <label>Recording Server</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_User_ID_Appendix__c</fullName>
        <label>User ID Appendix</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_User_ID_Field__c</fullName>
        <label>User ID Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_CP_User_Login_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Login Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__RT_VP_Meta_Data_Keys__c</fullName>
        <label>Meta Data Keys</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__RT_VP_Query_Server__c</fullName>
        <label>Query Server</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_VP_Recording_Link_Field__c</fullName>
        <label>Recording Link Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_VP_Recording_Server__c</fullName>
        <inlineHelpText>recording server URLs with port in the format https://FQDN:port</inlineHelpText>
        <label>Recording Servers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_VP_User_ID_Appendix__c</fullName>
        <label>User ID Appendix</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__RT_VP_User_Login_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Login Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_CallAgentID__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this option is set to true, the Dial button in the team section dials the agent ID instead of the agent extension.</inlineHelpText>
        <label>Call Agent ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_Click_To_Dial_Queue__c</fullName>
        <inlineHelpText>This option allows linking a queue with a click-to-dial number. If a valid configuration exists, a button will appear on the right side in the queues list for that particular queue to execute the click-to-dial.</inlineHelpText>
        <label>Click-to-Dial Queue</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_CriticalNumOfCallsThreshold__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>If the number of calls in a queue is equal or greater than this value, the queue gets highlighted red in the view.</inlineHelpText>
        <label>Critical Number of Calls in Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_CriticalWaitTimeThreshold__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>If the time for the longest call in a queue is equal or higher than this value (seconds), the queue gets highlighted red in the view.</inlineHelpText>
        <label>Critical Wait Time Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_FilterMask__c</fullName>
        <inlineHelpText>This option will enable / disable the filters for the Team and the Queue View.</inlineHelpText>
        <label>Enable Filtering</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TeamState</fullName>
                    <label>Team filter enabled</label>
                </value>
                <value>
                    <fullName>QueueStats</fullName>
                    <label>Queue filter enabled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Realtime_HideQueueView__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this option is set to true, the queue view will not be shown in the b+s RealtimeView Component.</inlineHelpText>
        <label>Hide Queue View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_HideTeamView__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this option is set to true, the team view will not be shown in the b+s RealtimeView Component.</inlineHelpText>
        <label>Hide Team View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_HighNumOfCallsThreshold__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>If the number of calls in a queue is equal or greater than this value, the queue gets highlighted yellow in the view.</inlineHelpText>
        <label>High Number of Calls in Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_HighWaitTimeThreshold__c</fullName>
        <defaultValue>15</defaultValue>
        <inlineHelpText>If the time for the longest call in a queue is equal or higher than this value (seconds), the queue gets highlighted yellow in the view.</inlineHelpText>
        <label>High Wait Time Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_RefreshTimeQueue__c</fullName>
        <defaultValue>2</defaultValue>
        <inlineHelpText>This option will overwrite the update interval for the QueueView. In a normal Environment it doesn&apos;t have to be overwritten.</inlineHelpText>
        <label>Refresh Interval Queue</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_RefreshTimeTeam__c</fullName>
        <defaultValue>0.5</defaultValue>
        <inlineHelpText>This option will overwrite the update interval for the TeamView. In a normal Environment it doesn&apos;t have to be overwritten.</inlineHelpText>
        <label>Refresh Interval Team</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_ShowStateChangeTime__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>With this option it is possible to choose whether to display the column for the time of the last agent state in the team view.</inlineHelpText>
        <label>Show State Change Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Realtime_SortAgentNameBy__c</fullName>
        <inlineHelpText>Sort the agents by first or last name.</inlineHelpText>
        <label>Sort Agent Name By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Name</fullName>
                    <default>true</default>
                    <label>First Name</label>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>